syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

import "mesh/v1alpha1/selector.proto";
import "google/protobuf/duration.proto";

message Timeout {

  // List of selectors to match dataplanes that are sources of traffic.
  repeated Selector sources = 1;

  // List of selectors to match services that are destinations of traffic.
  repeated Selector destinations = 2;

  message Conf {
    // ConnectTimeout defines time to establish connection
    google.protobuf.Duration connect_timeout = 1;

    // Tcp defines timeouts that are applied when the protocol is TCP
    message Tcp {
      // IdleTimeout is defined as the period in which there are no bytes sent
      // or received on either the upstream or downstream connection
      google.protobuf.Duration idle_timeout = 1;
    }
    Tcp tcp = 2;

    // Http defines timeouts that are applied when the protocol is HTTP
    message Http {
      // RequestTimeout is a span between the point at which the entire
      // downstream request (i.e. end-of-stream) has been processed and when the
      // upstream response has been completely processed
      google.protobuf.Duration request_timeout = 1;
      // IdleTimeout is the time at which a downstream or upstream connection
      // will be terminated if there are no active streams
      google.protobuf.Duration idle_timeout = 2;
    }
    Http http = 3;

    // Grpc defines timeouts that are applied when the protocol is GRPC
    message Grpc {
      // StreamIdleTimeout is the amount of time that the connection manager
      // will allow a stream to exist with no upstream or downstream activity
      google.protobuf.Duration stream_idle_timeout = 1;
      // MaxStreamDuration is the maximum time that a streamâ€™s lifetime will
      // span
      google.protobuf.Duration max_stream_duration = 2;
    }
    Grpc grpc = 4;
  }
  Conf conf = 3;
}
